// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render actions.onClick 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="actions.onClick"
  id="actions.onClick"
  onClick={[Function]}
>
  New Lowdefy display block 
</div>
`;

exports[`Render default 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
>
  New Lowdefy display block 
</div>
`;

exports[`Render properties.hideActionLoading 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="properties.hideActionLoading"
  id="properties.hideActionLoading"
  onClick={[Function]}
>
  New Lowdefy display block 
</div>
`;

exports[`Render property.style 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"color\\":\\"red\\"}]}"
  data-testid="property.style"
  id="property.style"
  onClick={[Function]}
>
  New Lowdefy display block 
</div>
`;

exports[`Render property.title 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="property.title"
  id="property.title"
  onClick={[Function]}
>
  New Lowdefy display block 
  with title: Foo
</div>
`;

exports[`Test Schema actions.onClick 1`] = `true`;

exports[`Test Schema actions.onClick 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.hideActionLoading 1`] = `true`;

exports[`Test Schema properties.hideActionLoading 2`] = `null`;

exports[`Test Schema property.style 1`] = `true`;

exports[`Test Schema property.style 2`] = `null`;

exports[`Test Schema property.title 1`] = `true`;

exports[`Test Schema property.title 2`] = `null`;
